dynamic header with logo

--- a/public/directives/header.html
+++ b/public/directives/header.html
@@ -9,5 +9,10 @@
         </div>
       </div>
     </div>
+    <div class="col-xs-2 height-200">
+      <img src="images/ng_lg.png" class="center-block img-padding" width="80%"/>
+    </div>
+
+
   </div>
 </div>
