update with mobile table

--- a/public/directives/header.html
+++ b/public/directives/header.html
@@ -10,7 +10,9 @@
       </div>
     </div>
     <div class="col-xs-2 height-200">
-      <img src="images/ng_lg.png" class="center-block img-padding" width="80%"/>
+      <a ng-href="welcome">
+        <img src="images/ng_lg.png" class="center-block img-padding" width="80%"/>
+      </a>
     </div>
   </div>
 </div>
