--- a/public/directives/header.html
+++ b/public/directives/header.html
@@ -13,7 +13,7 @@
         <div class="col-xs-2 height-200">
           <div class="vert-center col-md-12">
             <span class="vert-center text-center">
-              <a ng-href="{{item.link}}" class="{{item.textcolor}}" id="header-link">{{item.title}}</a>
+              <a ng-href="{{item.link}}" class="{{item.textcolor}} title-font" id="header-link">{{item.title}}</a>
             </span>
           </div>
         </div>
